<resources>
    <string name="app_name">Kotlin-Food-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="searching_icon">searching icon</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="random_meal_image">random meal image</string>
    <string name="over_popular_items">over popular items</string>
    <string name="meal_image">Meal image</string>
    <string name="favorities_floating_button">Favorities floating button</string>
    <string name="category_beef">Category: Beef</string>
    <string name="area_usa">Area: USA</string>
    <string name="instructions">Instructions</string>
</resources>