<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/font"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/image_search"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/searching_icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_would_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:elevation="2dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_eat">

                <ImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/random_meal_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mealtest" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_over_pup_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/font"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_would_like_to_eat"
                app:layout_constraintTop_toBottomOf="@id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_over_pup_items" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
                app:layout_constraintTop_toBottomOf="@id/rec_view_meals_popular" />

            <androidx.cardview.widget.CardView
                android:id="@+id/category_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:elevation="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>