<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/meal_image"
                android:scaleType="centerCrop"
                android:src="@drawable/mealtest"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_45sdp">

            <LinearLayout
                android:id="@+id/meal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_categoryInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:text="@string/category_beef"
                    android:textColor="@color/g_black"
                    android:textSize="@dimen/_14ssp"
                    app:drawableLeftCompat="@drawable/ic_category" />

                <TextView
                    android:id="@+id/tv_areaInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:text="@string/area_usa"
                    android:textColor="@color/g_black"
                    android:textSize="@dimen/_14ssp"
                    app:drawableLeftCompat="@drawable/ic_area" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font"
                android:includeFontPadding="false"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meal_info" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_youtube"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/yt_icon" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorities_save_buttno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/favorities_floating_button"
        android:src="@drawable/ic_fav"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/white" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>